fix(firmware): drop the dead local-build path and correct a wrong test assertion
FirmwareBuilderService carried a second, unused compilation path left over from
before the builder service existed: a private run(Job, BuildRequest) plus its
executor, Job class, sha()/chipName() helpers and /tmp source/root fields, none
of which had a caller. It also still referenced build/xiaozhi.bin, so it would
have failed had anything invoked it. create() has long delegated to the
firmware-builder HTTP service, so removing the path leaves exactly one place
that turns source into firmware.

Also fix SensitiveDataUtilsTest.maskMiddle_keeps_four_at_each_end_for_long_strings.
It asserted masked.endsWith("3123") for input "verylongapikeyvalue123", whose
last four characters are "e123"; the implementation was correct and the
assertion was not. The test dates from upstream and was failing before this
change, so the suite now goes green (163 tests).

The compose firmware-builder service also mounts docker/firmware-builder
read-only, matching how pico-server already hot-mounts its source, so builder
fixes take effect on restart instead of requiring a multi-GB image rebuild.